--- a/index.html
+++ b/index.html
@@ -54,13 +54,14 @@
       <br>
       <br>
       Also need to send in videos and pictures for cabinet posts. Example picture below:
+      <br>
+      <img src="images/lol.png" alt="jeremy doing wushu" width="300" height="400">
+      <details>
+        <summary>Above:</summary>
+        Jeremy doing an aerial at MAE 2022
+      </details>
+      
     </p>
-    
-    <img src="images/lol.png" alt="jeremy doing wushu" width="300" height="400">
-    <details>
-      <summary>Above:</summary>
-      Jeremy doing an aerial at MAE 2022
-    </details>
 
     <h3>3. Practice Schedule</h3>
     <p>
@@ -72,9 +73,10 @@
     <h3>Recordings from Meeting: </h3>
     <b>
       Jeremy can't write C:
+    <b>
     <br>
     <video controls width="320" height="240" src="media/Test_Film.MOV">
-      <p>Your browser does not support HTML5 audio.</p>
+      Your browser does not support HTML5 audio.
     </video>
     <br>
     <br>
@@ -83,7 +85,7 @@
     <br>
     <audio controls preload="none">
       <source src="media/Test_Audio.m4a" type="audio/mp4" />
-      <p>Your browser does not support HTML5 audio.</p>
+      Your browser does not support HTML5 audio.
     </audio>
     <br>
     <br>
