Made title light blue

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
   </head>
   <body>
-    <h1>UCSD Wushu Cabinet Meeting</h1>
+    <h1 style="color:rgb(0,150,200);">UCSD Wushu Cabinet Meeting</h1>
     <header>
       <i>
         Start: 1:03pm, October 9<br>
