Added light blue background. Also attatched css file to html file

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Managed Meeting Minutes</title>
     <meta charset="UTF-8">
     <meta name="author" content="Jeremy">
+    <link rel="stylesheet" href="mystyle.css">
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
   </head>
   <body>
