Added a box to encapsulate meeting info

--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
   <body>
     <h1 style="color:rgb(0,150,200);">UCSD Wushu Cabinet Meeting</h1>
     <header>
-      <i>
-        Start: 1:03pm, October 9<br>
-        End: 2:05pm
-      </i>
-      <br>
-      <nav>
-        <a href="https://discord.gg/4KPZxCpC">Wushu Discord</a>
-      </nav>
+      <div class="box">
+        <i>
+          Start: 1:03pm, October 9<br>
+          End: 2:05pm
+        </i>
+        <br>
+        <nav>
+          <a href="https://discord.gg/4KPZxCpC">Wushu Discord</a>
+        </nav>
+      </div>
     </header>
 
     <h3 style="color:#50A000;">Attendees</h3>
