Added underline to agenda header Made attendees list alignment justified

--- a/index.html
+++ b/index.html
@@ -23,17 +23,19 @@
     </header>
 
     <h3 style="color:#50A000;">Attendees</h3>
-    <div class="box secondary">
-      <ul>
-        <li><span>Jeremy</span></li>
-        <li>Austin</li>
-        <li>Nathan</li>
-      </ul>
+    <div style="text-align: justify;">
+      <div class="box secondary">
+        <ul>
+          <li><span>Jeremy</span></li>
+          <li>Austin</li>
+          <li>Nathan</li>
+        </ul>
+      </div>
     </div>
 
     
     <div class="box third">
-      <h2 style="color:hsl(40,100%,50%);">Agenda</h2>
+      <h2 style="color:hsl(40,100%,50%); text-decoration: underline;">Agenda</h2>
     </div>
     
     <ol>
