Added underline to Agenda header Also changed text alignment for attendees

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
 
     <h3 style="color:#50A000;">Attendees</h3>
-    <div class="box secondary">
+    <div class="box secondary" style="text-align:justify">
       <ul>
         <li><span>Jeremy</span></li>
         <li>Austin</li>
@@ -33,7 +33,7 @@
 
     
     <div class="box third">
-      <h2 style="color:hsl(40,100%,50%);">Agenda</h2>
+      <h2 style="color:hsl(40,100%,50%); text-decoration: underline;">Agenda</h2>
     </div>
     
     <ol>
