moved video over

--- a/index.html
+++ b/index.html
@@ -83,9 +83,12 @@
       Jeremy can't write C:
     </b>
     <br>
-    <video controls width="320" height="240" src="media/Test_Film.MOV">
-      Your browser does not support HTML5 audio.
-    </video>
+    <div id="video_move">
+      <video controls width="320" height="240" src="media/Test_Film.MOV">
+        Your browser does not support HTML5 audio.
+      </video>
+    </div>
+
     <br>
     <br>
 
