Adjusted text using display elements

--- a/index.html
+++ b/index.html
@@ -55,14 +55,11 @@
 
     <h3 style="color:blue";>2. Cabinet Duties</h3>
     
-    Need to create other cabinet videos. Finished ones are all currently on <a href="https://www.youtube.com/c/UCSDWushu">Youtube</a>.
-    <br>
-    <br>
-    <strong>Important:</strong> Tell everyone to change their discord names to their real names. Bring up in class
-    <br>
-    <br>
-    Also need to send in videos and pictures for cabinet posts. Example picture below:
-    <br>
+    <div class="inline">
+      Need to create other cabinet videos. Finished ones are all currently on <a href="https://www.youtube.com/c/UCSDWushu">Youtube</a>.
+      <strong>Important:</strong> Tell everyone to change their discord names to their real names. Bring up in class.<br>
+      Also need to send in videos and pictures for cabinet posts. Example picture below:
+    </div>
     <img src="images/lol.png" alt="jeremy doing wushu" width="300" height="400">
 
     <details>
@@ -73,11 +70,13 @@
     
 
     <h3 style="color:blue";>3. Practice Schedule</h3>
-    <p>
-      Practice today will be <em>fun</em> according to Nathan
-      <br>
-      Newbies will learn remaining kicks. Advanced students will drill all basics.
-    </p>
+    <div class="block">
+      <p>
+        Practice today will be <em>fun</em> according to Nathan
+        <br>
+        Newbies will learn remaining kicks. Advanced students will drill all basics.
+      </p>
+    </div>
 
     <h3 style="color:blue";>Recordings from Meeting: </h3>
     <b>
